src/test/resources/semantic/correct/TS_BASIC_HERENCIA_METODOS.ru
struct A{


}

impl A{
    st fn m1()->Int{

    }
}

impl B{
    fn m2(Int a, Str b)->void{
        (IO.out_str("f_"));
    }
}
struct B:A{

}
impl C{
    fn m3           (Bool a, Char c)->Str{
        (IO.out_int(num));
        (IO.out_str("="));
    }
    fn m2(Int a,Str b)->void{
        Int a;
        (IO.out_int(1));
        a=1;
    }
}

struct C:B{

}

start{

}
