src/test/resources/semantic/error/TS_ERROR_IGUALES_PARAMETROS_METODO.ru
/?
/?
/?
/? Los identificadores utilizados en la lista de parametros formales deben ser distintos

struct A{

}

impl A{
    fn m1(Int a, Str a, Char a)-> Int{
    
    }
}
start{

}